@startuml

class User {
    - id
    - name
    - email
    - contactNumber
    - address
}

class Admin {
    - id
    - name
    - email
}

class Book {
    - id
    - title
    - author
    - genre
    - condition
    - status  ' e.g., "available", "exchanged"
}

class Exchange {
    - id
    - date
    - status  ' e.g., "pending", "completed", "cancelled"
}

class Report {
    - id
    - reason  ' e.g., inappropriate listing
    - details
    - status  ' e.g., "pending", "resolved"
}

class Feedback {
    - id
    - rating
    - comment
}

class Search {
    - keywords
    - filters  ' e.g., title, author, genre
}

' Associations
User "1" --> "*" Book : Lists
User "1" --> "*" Exchange : Participates In
User "0..*" --> "*" Report : Reports
User "0..*" --> "*" Feedback : Provides
Exchange "1..*" --> "*" Book : Includes
Exchange "1" --> "2" User : Participants are
Report "0..*" --> "1" Admin : Manages
Admin "1" --> "0..*" Report : Deletes
Admin "1" --> "0..*" User : Deletes
Admin "1" --> "0..*" Book : Deletes
Feedback "1" --> "1" Exchange : Rates
Search "0..*" --> "*" Book : Filters
Search "0..*" --> "*" User : FiltersByUser

@enduml
